# mtf2json

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: actions.yaml
mtf2json/: __init__.py  cli.py  mtf2json.py  mtf2json.pyi
tests/: test_cli.py  test_generic_biped.py  test_specific_biped.py
tests/json/biped/: Amarok_3.json  Atlas_AS7-K.json  Banshee_BNC-3E.json  Dragon_Fire_DGR-3F.json  Zeus_X_ZEU-X.json
tests/mtf/biped/: Amarok_3.mtf  Banshee_BNC-3E.mtf  UrbanMech_UM-R96.mtf
